Refactor and enhance DemocracyLib: add DemocracyConfigManager, update logging and service management classes, and improve CI configuration