@@ -12,6 +12,8 @@ import javax.tools.Diagnostic;
 import javax.tools.JavaFileObject;
 import java.io.IOException;
 import java.io.Writer;
+import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -21,7 +23,6 @@ import java.util.stream.Collectors;
  * This processor scans bridge APIs/methods annotated with {@link BridgeApi}/{@link BridgeMethod}
  * and generates a deterministic contract class with method identifiers and signatures.
  * <p>
- * Runtime code should use the generated class and avoid inlining method names.
  */
 @SupportedAnnotationTypes({
         "net.democracycraft.democracyLib.api.bootstrap.contract.BridgeApi",
@@ -35,6 +36,7 @@ public final class BridgeContractProcessor extends AbstractProcessor {
 
     private static final String GENERATED_PKG = "net.democracycraft.democracyLib.api.bootstrap";
     private static final String GENERATED_NAME = "GeneratedBridgeContract";
+    private static final String GENERATED_IDS_NAME = "GeneratedBridgeIds";
 
     private Types types;
     private Elements elements;
@@ -58,14 +60,98 @@ public final class BridgeContractProcessor extends AbstractProcessor {
             return false;
         }
 
+        // validate contract determinism and prevent ambiguous/duplicate ids.
+        boolean ok = validateNoDuplicateContractIds(apis);
+        ok &= validateOverloadPolicies(apis);
+        if (!ok) {
+            return false;
+        }
+
         try {
             writeGenerated(anchorKeys, apis, protocol);
+            writeGeneratedIds(apis);
         } catch (Exception e) {
             processingEnv.getMessager()
                     .printMessage(Diagnostic.Kind.ERROR, "Failed generating " + GENERATED_NAME + ": " + e.getMessage());
         }
 
         return false;
+    }
+
+    private boolean validateNoDuplicateContractIds(List<ApiSurface> apis) {
+        boolean ok = true;
+        Map<String, MethodSpec> firstById = new HashMap<>();
+
+        for (ApiSurface api : apis) {
+            for (MethodSpec m : api.methods) {
+                MethodSpec first = firstById.putIfAbsent(m.id, m);
+                if (first != null) {
+                    ok = false;
+                    error(m.source,
+                            "Duplicate bridge contract id '" + m.id + "'. " +
+                                    "First defined at " + formatElement(first.source) + ". " +
+                                    "Fix by using stability=STABLE_ID with an explicit id, " +
+                                    "or change SignaturePolicy/BridgeOverloadKey to disambiguate.");
+                }
+            }
+        }
+
+        return ok;
+    }
+
+    private boolean validateOverloadPolicies(List<ApiSurface> apis) {
+        boolean ok = true;
+
+        for (ApiSurface api : apis) {
+            // Group by Java method name.
+            Map<String, List<MethodSpec>> byName = api.methods.stream()
+                    .collect(Collectors.groupingBy(m -> m.javaName));
+
+            for (Map.Entry<String, List<MethodSpec>> entry : byName.entrySet()) {
+                List<MethodSpec> sameName = entry.getValue();
+                if (sameName.size() <= 1) continue;
+
+                // If any overload is marked ERROR, any overload at that name is a contract violation.
+                boolean anyErrorPolicy = sameName.stream().anyMatch(m -> m.overloadPolicy == OverloadPolicy.ERROR);
+                if (anyErrorPolicy) {
+                    ok = false;
+                    for (MethodSpec m : sameName) {
+                        error(m.source,
+                                "Overloaded bridge method '" + api.typeFqn + "#" + m.javaName + "' is not allowed (OverloadPolicy.ERROR). " +
+                                        "Disambiguate by renaming the method, using BridgeOverloadKey, or change overloads() policy.");
+                    }
+                    continue;
+                }
+
+                // ARITY_ONLY is ambiguous if multiple overloads share the same arity.
+                Map<Integer, List<MethodSpec>> byArity = sameName.stream()
+                        .collect(Collectors.groupingBy(m -> m.paramTypeFqns == null ? 0 : m.paramTypeFqns.size()));
+                for (Map.Entry<Integer, List<MethodSpec>> byArityEntry : byArity.entrySet()) {
+                    List<MethodSpec> sameArity = byArityEntry.getValue();
+                    if (sameArity.size() <= 1) continue;
+
+                    boolean anyArityOnly = sameArity.stream().anyMatch(m -> m.signaturePolicy == SignaturePolicy.ARITY_ONLY);
+                    if (anyArityOnly) {
+                        ok = false;
+                        for (MethodSpec m : sameArity) {
+                            error(m.source,
+                                    "Ambiguous overloads for bridge method '" + api.typeFqn + "#" + m.javaName + "' with arity " + byArityEntry.getKey() +
+                                            " while SignaturePolicy.ARITY_ONLY is used. " +
+                                            "Use SignaturePolicy.FULL_SIGNATURE or add @BridgeOverloadKey to disambiguate.");
+                        }
+                    }
+                }
+            }
+        }
+
+        return ok;
+    }
+
+    private static String formatElement(Element element) {
+        if (element == null) return "<unknown>";
+        Element enclosing = element.getEnclosingElement();
+        String owner = enclosing == null ? "<unknown>" : enclosing.toString();
+        return owner + "::" + element.getSimpleName();
     }
 
     private Map<String, AnchorKey> collectAnchorKeys(RoundEnvironment roundEnvironment) {
@@ -122,14 +208,14 @@ public final class BridgeContractProcessor extends AbstractProcessor {
     }
 
     private MethodSpec buildMethodSpec(BridgeNamespace namespace, ExecutableElement methodElement, BridgeMethod bridgeMethod) {
-        MethodSpec spec = new MethodSpec();
-        spec.source = methodElement;
-        spec.namespace = namespace.name();
-        spec.javaName = methodElement.getSimpleName().toString();
-        spec.side = bridgeMethod.side();
-        spec.signaturePolicy = bridgeMethod.signature();
-        spec.overloadPolicy = bridgeMethod.overloads();
-        spec.sinceProtocol = bridgeMethod.sinceProtocol();
+        MethodSpec methodSpec = new MethodSpec();
+        methodSpec.source = methodElement;
+        methodSpec.namespace = namespace.name();
+        methodSpec.javaName = methodElement.getSimpleName().toString();
+        methodSpec.side = bridgeMethod.side();
+        methodSpec.signaturePolicy = bridgeMethod.signature();
+        methodSpec.overloadPolicy = bridgeMethod.overloads();
+        methodSpec.sinceProtocol = bridgeMethod.sinceProtocol();
 
         String overloadKey = null;
         BridgeOverloadKey overloadKeyAnnotation = methodElement.getAnnotation(BridgeOverloadKey.class);
@@ -137,30 +223,30 @@ public final class BridgeContractProcessor extends AbstractProcessor {
             overloadKey = overloadKeyAnnotation.value().trim();
         }
 
-        spec.paramTypeFqns = methodElement.getParameters().stream()
+        methodSpec.paramTypeFqns = methodElement.getParameters().stream()
                 .map(parameter -> eraseToFqn(parameter.asType()))
                 .collect(Collectors.toList());
-        spec.returnTypeFqn = eraseToFqn(methodElement.getReturnType());
+        methodSpec.returnTypeFqn = eraseToFqn(methodElement.getReturnType());
 
         if (bridgeMethod.stability() == BridgeStability.STABLE_ID) {
             if (bridgeMethod.id() == null || bridgeMethod.id().isBlank()) {
                 error(methodElement, "BridgeMethod(stability=STABLE_ID) requires a non-empty id.");
-                spec.id = namespace.name() + "#" + spec.javaName;
+                methodSpec.id = namespace.name() + "#" + methodSpec.javaName;
             } else {
-                spec.id = bridgeMethod.id().trim();
+                methodSpec.id = bridgeMethod.id().trim();
             }
         } else {
             if (overloadKey != null) {
-                spec.id = namespace.name() + "#" + spec.javaName + ":" + overloadKey;
-            } else if (spec.signaturePolicy == SignaturePolicy.ARITY_ONLY) {
-                spec.id = namespace.name() + "#" + spec.javaName + "/" + spec.paramTypeFqns.size();
+                methodSpec.id = namespace.name() + "#" + methodSpec.javaName + ":" + overloadKey;
+            } else if (methodSpec.signaturePolicy == SignaturePolicy.ARITY_ONLY) {
+                methodSpec.id = namespace.name() + "#" + methodSpec.javaName + "/" + methodSpec.paramTypeFqns.size();
             } else {
-                String signature = String.join(",", spec.paramTypeFqns);
-                spec.id = namespace.name() + "#" + spec.javaName + "(" + signature + ")";
+                String signature = String.join(",", methodSpec.paramTypeFqns);
+                methodSpec.id = namespace.name() + "#" + methodSpec.javaName + "(" + signature + ")";
             }
         }
 
-        return spec;
+        return methodSpec;
     }
 
     private Integer collectProtocolVersion(RoundEnvironment roundEnvironment) {
@@ -223,7 +309,7 @@ public final class BridgeContractProcessor extends AbstractProcessor {
     }
 
     private void writeMethods(CodeWriter out, List<ApiSurface> apis) throws IOException {
-        List<MethodSpec> allMethods = apis.stream().flatMap(api -> api.methods.stream()).collect(Collectors.toList());
+        List<MethodSpec> allMethods = apis.stream().flatMap(api -> api.methods.stream()).toList();
 
         out.line("public static final class Methods {");
         out.indent();
@@ -237,10 +323,10 @@ public final class BridgeContractProcessor extends AbstractProcessor {
         }
 
         out.line("");
-        out.line("private static final Map<String, Spec> SPECS;");
+        out.line("public static final Map<String, Spec> SPECS;");
         out.line("static {");
         out.indent();
-        out.line("Map<String, Spec> m = new HashMap<>();");
+        out.line("Map<String, Spec> methods = new HashMap<>();");
 
         for (MethodSpec methodSpec : allMethods) {
             String params = methodSpec.paramTypeFqns.stream()
@@ -248,13 +334,13 @@ public final class BridgeContractProcessor extends AbstractProcessor {
                     .collect(Collectors.joining(", "));
 
             out.line(
-                    "m.put(" + methodSpec.constName + ", new Spec(\"" + escapeJava(methodSpec.javaName) +
+                    "methods.put(" + methodSpec.constName + ", new Spec(\"" + escapeJava(methodSpec.javaName) +
                             "\", List.of(" + params + "), \"" + escapeJava(methodSpec.returnTypeFqn) +
                             "\", \"" + escapeJava(methodSpec.namespace) + "\", " + methodSpec.sinceProtocol + "));"
             );
         }
 
-        out.line("SPECS = Collections.unmodifiableMap(m);");
+        out.line("SPECS = Collections.unmodifiableMap(methods);");
         out.unindent();
         out.line("}");
         out.line("");
@@ -272,10 +358,98 @@ public final class BridgeContractProcessor extends AbstractProcessor {
         out.line("public record Spec(String javaName, List<String> paramTypeFqns, String returnTypeFqn, String namespace, int sinceProtocol) {}");
     }
 
-    private String toConstName(String seed, String id) {
-        String cleaned = seed.replaceAll("[^A-Za-z0-9]", "_");
-        int hash = id.hashCode();
-        return "M_" + cleaned.substring(0, Math.min(60, cleaned.length())).toUpperCase(Locale.ROOT) + "_" + Integer.toHexString(hash).toUpperCase(Locale.ROOT);
+    private void writeGeneratedIds(List<ApiSurface> apis) throws IOException {
+        JavaFileObject file = processingEnv.getFiler().createSourceFile(GENERATED_PKG + "." + GENERATED_IDS_NAME);
+        try (Writer writer = file.openWriter()) {
+            CodeWriter out = new CodeWriter(writer);
+
+            out.line("package " + GENERATED_PKG + ";");
+            out.line("");
+            out.line("/**");
+            out.line(" * GENERATED FILE. DO NOT EDIT.");
+            out.line(" * <p>");
+            out.line(" * friendly deterministic aliases for bridge contract ids.");
+            out.line(" * Generated by " + BridgeContractProcessor.class.getName() + ".");
+            out.line(" */");
+            out.line("public final class " + GENERATED_IDS_NAME + " {");
+            out.indent();
+            out.line("private " + GENERATED_IDS_NAME + "() {}");
+            out.line("");
+
+            // Flatten methods, deterministic order.
+            List<MethodSpec> allMethods = apis.stream()
+                    .flatMap(api -> api.methods.stream())
+                    .sorted(Comparator.comparing((MethodSpec m) -> m.namespace)
+                            .thenComparing(m -> m.javaName)
+                            .thenComparing(m -> String.join(",", m.paramTypeFqns)))
+                    .toList();
+
+            String currentNamespace = null;
+            for (MethodSpec m : allMethods) {
+                if (!Objects.equals(currentNamespace, m.namespace)) {
+                    if (currentNamespace != null) {
+                        out.unindent();
+                        out.line("}");
+                        out.line("");
+                    }
+                    currentNamespace = m.namespace;
+                    out.line("public static final class " + namespaceClassName(currentNamespace) + " {");
+                    out.indent();
+                    out.line("private " + namespaceClassName(currentNamespace) + "() {}");
+                    out.line("");
+                }
+
+                String fieldName = aliasFieldName(m);
+                out.line("public static final String " + fieldName + " = \"" + escapeJava(m.id) + "\";");
+            }
+
+            if (currentNamespace != null) {
+                out.unindent();
+                out.line("}");
+            }
+
+            out.unindent();
+            out.line("}");
+        }
+    }
+
+    private static String namespaceClassName(String namespace) {
+        // DEMOCRACY_LIB_API -> DemocracyLibApi
+        String[] parts = namespace.toLowerCase(Locale.ROOT).split("_");
+        StringBuilder sb = new StringBuilder();
+        for (String part : parts) {
+            if (part.isBlank()) continue;
+            sb.append(Character.toUpperCase(part.charAt(0))).append(part.substring(1));
+        }
+        return sb.toString();
+    }
+
+    private static String aliasFieldName(MethodSpec methodSpec) {
+        // Example: getGitHubGistService__Plugin__GitHubGistConfiguration
+        StringBuilder sb = new StringBuilder();
+        sb.append(methodSpec.javaName);
+        for (String p : methodSpec.paramTypeFqns) {
+            sb.append("__").append(simpleTypeToken(p));
+        }
+        String raw = sb.toString();
+        // sanitize to a valid Java identifier
+        raw = raw.replaceAll("[^A-Za-z0-9_]", "_");
+        // avoid leading digit
+        if (!raw.isEmpty() && Character.isDigit(raw.charAt(0))) {
+            raw = "_" + raw;
+        }
+        return raw;
+    }
+
+    private static String simpleTypeToken(String fqn) {
+        // Use simple name; include outer for nested types.
+        if (fqn == null || fqn.isBlank()) return "Unknown";
+        String cleaned = fqn.replace('$', '.');
+        int lastDot = cleaned.lastIndexOf('.');
+        String simple = lastDot >= 0 ? cleaned.substring(lastDot + 1) : cleaned;
+        // Squash generics remnants just in case.
+        simple = simple.replaceAll("<.*>", "");
+        return simple;
     }
 
     private void error(Element element, String msg) {
@@ -303,9 +477,35 @@ public final class BridgeContractProcessor extends AbstractProcessor {
         return null;
     }
 
-    private static String escapeJava(String s) {
-        if (s == null) return "";
-        return s.replace("\\", "\\\\").replace("\"", "\\\"");
+    private static String escapeJava(String string) {
+        if (string == null) return "";
+        return string.replace("\\", "\\\\").replace("\"", "\\\"");
+    }
+
+    private static String toConstName(String seed, String id) {
+        // Keep it deterministic, short, and collision-resistant.
+        // The seed provides readability; the hash disambiguates overloads and stable IDs.
+        String base = (seed == null ? "M" : seed)
+                .replaceAll("[^A-Za-z0-9_]", "_")
+                .toUpperCase(Locale.ROOT);
+
+        String hash = shortHashHex(id == null ? "" : id);
+        return "M_" + base + "_" + hash;
+    }
+
+    private static String shortHashHex(String input) {
+        try {
+            MessageDigest messageDigest = MessageDigest.getInstance("SHA-256");
+            byte[] digest = messageDigest.digest(input.getBytes(StandardCharsets.UTF_8));
+            // 4 bytes => 8 hex chars (good enough for const suffix, contract id still stored as value)
+            StringBuilder stringBuilder = new StringBuilder();
+            for (int i = 0; i < 4 && i < digest.length; i++) {
+                stringBuilder.append(String.format(Locale.ROOT, "%02X", digest[i]));
+            }
+            return stringBuilder.toString();
+        } catch (Exception e) {
+            return "00000000";
+        }
     }
 
     private static final class CodeWriter implements AutoCloseable {
